# news-rec-engine

./: .gitignore  NEXT_STEPS.md  README.md  pyproject.toml  requirements.txt
newsrec/: __init__.py  api.py  config.py  evaluation.py  recommender.py  similarity.py  utils.py
newsrec/data/: loader.py
newsrec/text/: preprocess.py
newsrec/text/vectorizers/: __init__.py  base.py  sbert.py  tfidf.py  word2vec.py
scripts/: cli.py
tests/: test_evaluation.py  test_loader.py  test_preprocess.py  test_recommender.py  test_vectorizers.py
